# biographical_RAG

./: .gitignore  README.md  pyproject.toml  setup.py
chroma_db/e2a547fe-9478-419d-a5ea-3b3513996f05/: index_metadata.pickle
scraped_content/: marcus_aurelius_content.json
src/biographical_RAG/: __init__.py  rag_qa.py  run.py  scraper.py
