[project]
name = "biographical-RAG"
version = "0.1.0"
description = "Chat with historical figures using their real-world writings and a vector store."
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "streamlit",
    "beautifulsoup4",
    "newspaper3k",
    "sentence-transformers",
    "faiss-cpu",
    "openai",
    "chromadb",
    "python-dotenv",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "protobuf<=3.20.3",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest"
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "W"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
